# xevisai6

./: README.md
xevisai6/xevisai6/: CMakeLists.txt  README.md  package.xml
xevisai6/xevisai6/config/: controllers.yaml  joint_names_xevisai6.yaml
xevisai6/xevisai6/launch/: display.launch  gazebo.launch  sim.launch.py
xevisai6/xevisai6/meshes/: base_link.STL  camera_link.STL  left_link.STL  lidar_link.STL  noi_link.STL  prismatic_link.STL  right_link.STL  rotary_link.STL
xevisai6/xevisai6/rviz2/: my_config.rviz
xevisai6/xevisai6/scripts/: teleop_node.py  virtual_encoder.py
xevisai6/xevisai6/urdf/: xevisai6.csv  xevisai6.urdf
